# battleship-game

./: .gitignore  Makefile.am  README.md  config.h  configure.ac
.github/workflows/: c-cpp.yml
docs/: cli.plantuml  game-logic.plantuml
src/: Makefile.am  battleship-tests  commons.cpp  commons.hpp  main.cpp  types.cpp  types.hpp  utils.cpp  utils.hpp
src/adapters/: sdl-adapter-impl.cpp  sdl-adapter-impl.hpp  sdl-adapter.hpp
src/cli/: cli.cpp  cli.hpp  command-builder.cpp  command-builder.hpp  command-palette.cpp  command-palette.hpp  commons.hpp  input-reader.cpp  input-reader.hpp  patricia-tree.hpp
src/controller/: board-controller.cpp  board-controller.hpp  board-tile-controller.cpp  board-tile-controller.hpp  game-controller.cpp  game-controller.hpp  window-controller.cpp  window-controller.hpp
src/event-broker/: Makefile.am  event-broker.cpp  event-broker.hpp  events.hpp  subscriber.hpp  subscription-handler-factory.cpp  subscription-handler-factory.hpp  subscription-handler.cpp  subscription-handler.hpp  topics.hpp
src/gui/: events.hpp  types.cpp  types.hpp  window.cpp  window.hpp
src/gui/world/: board-tile.cpp  board-tile.hpp  types.cpp  types.hpp  world-object.cpp  world-object.hpp  world.cpp  world.hpp
src/logic/: game-logic.cpp  game-logic.hpp  types.cpp  types.hpp
src/logic/minefield/: minefield.cpp  minefield.hpp
src/world/: board-tile.cpp  board-tile.hpp  world-object.cpp  world-object.hpp  world.cpp  world.hpp
tests/: .gitignore  Makefile.am  battleship-tests  types-tests.cpp
tests/cli/: cli-tests.cpp  patricia-tree-tests.cpp  should-not-read-invalid-data-test.txt  should-read-a-full-line-test.txt  should-run-a-command-successfully.txt
tests/controller/: board-controller-tests.cpp  window-controller-tests.cpp
tests/event-broker/: event-broker-tests.cpp  events-tests.cpp  subscription-handler-factory-tests.cpp  subscription-handler-tests.cpp
tests/event-broker/mocks/: event.hpp
tests/logic/: types-tests.cpp
tests/mocks/: cli-command.hpp  command-tree.hpp  event.hpp  field.hpp  input-reader.hpp  subscriber.hpp  subscription-handler-factory.hpp  subscription-handler.hpp
tests/mocks/adapters/: mock-sdl-adapter.hpp
tests/mocks/cli/: mock-command-builder.hpp  mock-input-reader.hpp
tests/mocks/event-broker/: mock-event-broker.hpp  mock-event.hpp  mock-subscription-handler.hpp
tests/mocks/gui/: mock-window.hpp
tests/mocks/gui/world/: mock-world.hpp
tests/mocks/logic/: mock-field.hpp
